<resources>
    <string name="app_name">面面</string>
    <string name="skip">跳过</string>
    <string name="welcome_notice">欢迎使用面面</string>>
    <string name="notice">将使用手机号码作为帐户完成登陆/注册</string>>
    <string name="pre_phone">+86</string>>
    <string name="input_phone_notice">请输入手机号码</string>
    <string name="input_code_notice">请输入验证码</string>>
    <string name="send_code">发送验证码</string>
    <string name="login">登陆</string>
    <string name="phone_error">手机号为空或手机号不正确</string>
    <string name="code_error">手机验证码错误</string>
    <string name="first_page">首页</string>
    <string name="community">社区</string>
    <string name="chat">聊天</string>>
    <string name="mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>>
    <string name="favorite_company">推荐感兴趣的公司</string>
    <string name="favorite_interview">推荐面试官</string>>
</resources>