<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <!-- 底部tab -->
        <LinearLayout
            android:id="@+id/ll_bottom_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:baselineAligned="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/first_no" />

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_home"
                    android:layout_centerHorizontal="true"
                    android:text="@string/first_page"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_community"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <ImageView
                    android:id="@+id/iv_community"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/community_no" />

                <TextView
                    android:id="@+id/tv_community"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_community"
                    android:layout_centerHorizontal="true"
                    android:text="@string/community"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <ImageView
                    android:id="@+id/iv_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/chat_no" />


                <TextView
                    android:id="@+id/tv_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_chat"
                    android:layout_centerHorizontal="true"
                    android:text="@string/chat"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_mine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <ImageView
                    android:id="@+id/iv_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/mine_no" />


                <TextView
                    android:id="@+id/tv_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_mine"
                    android:layout_centerHorizontal="true"
                    android:text="@string/mine"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <!-- 内容部分， fragment切换 -->
        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/line"
            android:orientation="vertical" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/ll_bottom_tab"
            android:background="@color/white"
            android:layout_marginBottom="2dp"/>
    </RelativeLayout>

</FrameLayout>